--- a/index.html
+++ b/index.html
@@ -40,15 +40,8 @@
             <div id="linklist"></div>
         </section>
 
-        <section class="section content">
-            <header class="section__header">
-                <h2 class="title">Linklist Template</h2>
-            </header>
 
-            <div id="linklistTemplate"></div>
-        </section>
-
-        <section class="section content">
+        <!--section class="section content">
             <header class="section__header">
                 <h2 class="title">Linklist Vue</h2>
             </header>
@@ -60,7 +53,7 @@
                     </li>
                 </ol>
             </div>
-        </section>
+        </section-->
     </main>
 
     <footer class="footer">
